tests/baselines/reference/NotAssignableBetweenStructsWithoutInheritance.errors.txt
tests/cases/conformance/structs/types/NotAssignableBetweenStructsWithoutInheritance.ts(17,1): error TS2322: Type 'Size' is not assignable to type 'Animal'.
tests/cases/conformance/structs/types/NotAssignableBetweenStructsWithoutInheritance.ts(18,1): error TS2322: Type 'Animal' is not assignable to type 'Size'.


==== tests/cases/conformance/structs/types/NotAssignableBetweenStructsWithoutInheritance.ts (2 errors) ====
    // doc 8
    // Only a subtype struct can be assigned to a supertype struct.
    
    struct Animal {
    	feet: number;
    	constructor(name: string, numFeet: number) { }
    }
    
    struct Size {
    	feet: number;
    	constructor(numFeet: number) { }
    }
    
    var a: Animal;
    var s: Size;
    
    a = s;  //error
    ~
!!! error TS2322: Type 'Size' is not assignable to type 'Animal'.
    s = a;  //error
    ~
!!! error TS2322: Type 'Animal' is not assignable to type 'Size'.
    
    